evolution structure du projet

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8"/>
-        <link rel="stylesheet" href="./_build/css/styles.css">
+		<link rel="stylesheet" href="_styles.css">
+		<script src="_bundle.js"></script>
         
         <title>Coffee conspiration</title>
 	</head>
