--- a/src/modules/module-test/module-test.html
+++ b/src/modules/module-test/module-test.html
@@ -4,8 +4,8 @@
   </head>
   <body>
     <div>
-      <a href="module-test.html">Go to module test</a>
-      Hello, world from index !
+      <a href="index.html">Go back to index</a>
+      Hello, world from module test !
     </div>
   </body>
 </html>
