--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <div>
       <a href="module-test.html">Go to module test</a>
       Hello, world from index !
+      <img src="/assets/images/test.jpg">
     </div>
   </body>
 </html>
