Remplacement de browsersync par devserver

--- a/src/modules/module-test/module-test.html
+++ b/src/modules/module-test/module-test.html
@@ -6,6 +6,7 @@
     <div>
       <a href="index.html">Go back to index</a>
       Hello, world from module test !
+      <img src="/assets/images/test.jpg">
     </div>
   </body>
 </html>
